--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,215 @@
+/*--------------------- Imports ---------------------*/
+/* Fonte para titulos */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+/* Fonte para corpo */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/*--------------------- Variáveis ---------------------*/
+:root {
+  --branco: 'cor falta ser definida';
+  --preto: 'cor falta ser definida';
+  --cinza: 'cor falta ser definida';
+  --primaria: 'cor falta ser definida';
+  --secundaria: 'cor falta ser definida';
+  --botoes: 'cor falta ser definida';
+}
+
 /* Reset de css */
 *,
 a,
 ul {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style-type: none;
-    color: black;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
+  color: black;
+  font-size: 2rem;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Ajuste de medida rem */
 html {
   font-size: 62.5%;
+}
+
+/* Titulos */
+h1 {
+  font-size: 6.4rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Outfit', sans-serif;
+}
+
+/* base */
+body {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: column;
+  height: 90vh;
+  margin-top: 10vh;
+}
+
+/* Header */
+header,
+footer,
+.limite-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+
+header {
+  width: 100vw;
+  box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.2);
+  background: white;
+  position: fixed;
+  top: 0;
+}
+
+.limite-container {
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  padding: 1vh 2vw;
+  position: relative;
+}
+
+.logo {
+  height: 4rem;
+}
+
+header ul,
+footer ul {
+  display: flex;
+  justify-content: space-around;
+  gap: 1vw;
+}
+
+/* Botões do header landing page */
+.navegador-entradas a {
+  display: flex;
+  justify-content: center;
+  min-width: 12rem;
+  padding: 0.75rem 1.25rem;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.botao-cadastro {
+  outline: 0.2rem solid #214EE5;
+  color: #214EE5;
+}
+
+.botao-login {
+  outline: 0.2rem solid white;
+  background: #214EE5;
+  color: white;
+}
+
+/* Botões do header pós entrada */
+.navegador-paginas {
+  position: absolute;
+  bottom: -4.5vh;
+  right: 1vw;
+
+  & ul {
+    gap: 0.5vw;
+  }
+}
+
+.navegador-paginas a {
+  display: flex;
+  justify-content: center;
+  min-width: 9rem;
+  padding: 0.25rem 0.75rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+  background: gray;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.fechar-navegador {
+  display: none;
+  height: 2.5rem;
+}
+
+/* Padronização de main */
+main {
+  width: 90%;
+  max-width: 1200px;
+  padding-top: 2vh;
+}
+
+/* Footer */
+footer {
+  width: 100vw;
+  padding: 2vh 0 4vh 0;
+  background: #313131;
+
+  & p,
+  a {
+    font-size: 1.25rem;
+    text-align: center;
+    color: white;
+  }
+}
+
+footer section {
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+}
+
+footer nav {
+  width: 100%;
+  max-width: 38rem;
+}
+
+/*--------------------- Media queries ---------------------*/
+@media (max-width: 600px) {
+  /* Ajuste de header landing page*/
+  .navegador-entradas {
+    background: white;
+    padding: 1rem;
+    padding-top: 0.5rem;
+    border-radius: 0 0 1rem 1rem;
+    box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.2);
+    position: absolute;
+    bottom: -6vh;
+    right: 1vw;
+    
+    & a {
+      min-width: 9rem;
+      font-size: 1.25rem;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  /* Ajuste de header pós entrada*/
+  .fechar-navegador {
+    display: flex;
+  }
+
+  .navegador-paginas {
+    display: none;
+  }
+
+  /* Ajuste de posição dos links do footer */
+  footer .limite-container {
+    justify-content: center;
+    gap: 2vh;
+  }
 }
