--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -12,7 +12,7 @@
 .figura {
     height: 79vh;
     width: 50%;
-    min-width: 250px;
+    min-width: 200px;
 }
 
 .hero-banner img,
@@ -49,5 +49,26 @@
 
     & img {
         height: 4rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .hero-titulo {
+        max-width: 100%;
+    }
+
+    .hero-banner {
+        display: none;
+    }
+
+    .figura {
+        height: 60vh;
+    }
+}
+
+
+@media (max-width: 500px) {
+    .figura {
+        display: none;
     }
 }
