Finalização parcial do header e inicialização da estilização de quemsomos.html

--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: right;
     align-items: center;
-    background: rgb(211, 229, 235);
+    background: #D3E5E6;
     padding: 2rem;
     border-radius: 1rem;
 }
