--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -52,6 +52,7 @@
     }
 }
 
+/*--------------------- Media queries ---------------------*/
 @media (max-width: 600px) {
     .hero-titulo {
         max-width: 100%;
