--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,7 +57,6 @@ body {
   flex-flow: column;
   height: 90vh;
   margin-top: 10vh;
-  overflow-x: hidden;
 }
 
 /* Header */
@@ -98,26 +97,23 @@ header {
 }
 
 /* Botões do header landing page */
-.navegador-entradas a {
+.botao {
   display: flex;
   justify-content: center;
   min-width: 12rem;
   padding: 0.75rem 1.25rem;
   border-radius: 1rem;
+  background: #214EE5;
+  color: white;
   font-size: 1.5rem;
   font-weight: 600;
+
 }
 
-.botao-cadastro {
+.botao.variante {
   outline: 0.2rem solid #214EE5;
   background: white;
   color: #214EE5;
-}
-
-.botao-login {
-  outline: 0.2rem solid white;
-  background: #214EE5;
-  color: white;
 }
 
 /* Botões do header pós entrada */
@@ -217,17 +213,18 @@ main>* {
 
 /* Conteúdo inicial (titulo) */
 .titulo {
-  position: relative;
+  max-height: 25vh;
+  margin-bottom: 10vh;
 }
 
 .titulo::before {
   background: #D3E5E6;
-  height: 200%;
-  width: 200%;
+  height: 32vh;
+  width: 100%;
   content: '';
   position: absolute;
-  top: -50%;
-  left: -50%;
+  top: 0;
+  left: 0;
   z-index: -1;
 }
 
@@ -258,6 +255,16 @@ footer nav {
 }
 
 /*--------------------- Media queries ---------------------*/
+@media (max-width: 425px) {
+  .titulo {
+    margin-bottom: 5vh;
+  }
+
+  .titulo::before {
+    height: 40vh;
+  }
+}
+
 @media (max-width: 600px) {
 
   /* Ajuste de header landing page*/
@@ -279,6 +286,7 @@ footer nav {
 }
 
 @media (max-width: 768px) {
+
   /* Ajuste de fontes */
   *,
   a {
