--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,7 +96,7 @@ header {
   gap: 1vw;
 }
 
-/* Botões do header landing page */
+/* Botões */
 .botao {
   display: flex;
   justify-content: center;
@@ -107,7 +107,6 @@ header {
   color: white;
   font-size: 1.5rem;
   font-weight: 600;
-
 }
 
 .botao.variante {
@@ -131,7 +130,7 @@ header {
   display: flex;
   justify-content: center;
   min-width: 9rem;
-  padding: 0.25rem 0.75rem;
+  padding: 0.25rem 1rem;
   border-radius: 0 0 0.5rem 0.5rem;
   box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.2);
   background: white;
@@ -200,32 +199,14 @@ header {
 main {
   width: 90%;
   max-width: 1200px;
-  padding-top: 2vh;
-}
-
-main>*:not(:first-child) {
-  margin-top: 8vh;
-}
-
-main>* {
-  margin-bottom: 8vh;
 }
 
 /* Conteúdo inicial (titulo) */
 .titulo {
-  max-height: 25vh;
-  margin-bottom: 10vh;
-}
-
-.titulo::before {
+  padding: 4rem;
+  border-radius:0 0 4rem 4rem;
   background: #D3E5E6;
-  height: 32vh;
-  width: 100%;
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
+  transform: translateY(-2rem);
 }
 
 /* Footer */
@@ -255,16 +236,6 @@ footer nav {
 }
 
 /*--------------------- Media queries ---------------------*/
-@media (max-width: 425px) {
-  .titulo {
-    margin-bottom: 5vh;
-  }
-
-  .titulo::before {
-    height: 40vh;
-  }
-}
-
 @media (max-width: 600px) {
 
   /* Ajuste de header landing page*/
