--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -37,7 +37,7 @@
 }
 
 .resposta {
-    visibility: collapse;
+    visibility: hidden;
     height: 0;
     width: 100%;
     color: rgba(0, 0, 0, 0.5);
