Concluida funcionalidades de localização de abrigos próximos e eventos climáticos na região

--- a/assets/css/abrigos.css
+++ b/assets/css/abrigos.css
@@ -9,24 +9,45 @@
     background: linear-gradient(135deg, #e5ebf5 50%, #cfddf5 100%);
 }
 
-.abrigos li {
+.abrigo {
     display: flex;
     justify-content: space-between;
-    align-items: start;
     flex-flow: column;
-    height: 50vh;
-    max-width: fit-content;
+    min-height: 50vh;
+    max-height: fit-content;
     flex-grow: 1;
     flex-basis: 300px;
     padding: 2rem;
     border-radius: 2rem;
     background-color: #f0f8ff;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.2);
 }
 
-.abrigos img {
-    height: 60%;
+.abrigo img {
+    height: 25vh;
     width: 100%;
     margin-bottom: 2vh;
     object-fit: cover;
+}
+
+.avaliacao {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 1vw;
+}
+
+.estrela,
+.estrela-ativa {
+    height: 3rem;
+    width: 3rem;
+    background: url('../images/icone_estrela.png') center/contain no-repeat;
+}
+
+.estrela-ativa {
+    background: url('../images/icone-estrela_ativa.png') center/contain no-repeat;
+}
+
+.sem-abrigos {
+    display: none;
 }
