--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -214,6 +214,8 @@
 
 /* Pop up para emitir alerta/locais seguros */
 dialog {
+    width: 50vw;
+    min-width: 250px;
     padding: 4rem 2rem;
     border: none;
     border-radius: 2rem;
