--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -56,7 +56,7 @@
 }
 
 #search,
-#pesquisar-local {
+#pesquisar-local,#modoPanico {
     display: flex;
     align-items: center;
     gap: 0.8rem;
@@ -66,11 +66,15 @@
 }
 
 #search input,
-#pesquisar-local input {
+#pesquisar-local input,#modo-panico  {
     border: none;
     background-color: transparent;
     font-size: 16px;
     width: 100%;
+}
+
+#modoPanico{
+    background-color: #fff;
 }
 
 #search input:focus-visible,
@@ -235,6 +239,17 @@ dialog {
     min-width: 200px;
 }
 
+/*Estilização textos dialog*/
+.ajudaPanico,.pPanico {
+    font-weight: bold;
+    margin-block: 0.5rem;
+}
+
+.dialogPanico .botao{
+    margin: 0 auto;
+    margin-top: 1.8rem;
+}
+ 
 /*--------------------- Media queries ---------------------*/
 @media (max-width: 768px) {
     .clima-section {
