--- a/assets/css/landingpage.css
+++ b/assets/css/landingpage.css
@@ -22,7 +22,6 @@
 
 .hero-banner img,
 .figura img {
-    height: 100%;
     width: 100%;
     object-fit: cover;
 }
@@ -31,6 +30,16 @@
     max-width: 50%;
     padding: 8vh 2vw;
     padding-left: 4vw;
+}
+
+.hero-titulo p {
+    font-size: 1.6rem;
+}
+
+.cta {
+    width: 60%;
+    padding-block: 1.5rem; 
+    min-width: 200px;
 }
 
 /* 2ª seção */
