--- a/assets/css/quemsomos.css
+++ b/assets/css/quemsomos.css
@@ -117,6 +117,10 @@
     background-image: url('../images/icone_github.png');
 }
 
+.integrantes p{
+    margin-bottom: 1.5rem;
+}
+
 /*--------------------- Media queries ---------------------*/
 @media (max-width: 600px) {
     /* Ajustes seção 1 */
